--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -22,3 +22,15 @@ a {
     color: unset;
   }
 }
+
+.border-radius-10{
+  border-radius: 20px;
+}
+
+.border-radius-20{
+  border-radius: 20px;
+}
+.card-base{
+  background-color: #FFF;
+  box-shadow: 0px 4px 20px rgba(0,0,0,0.25);
+}
