--- a/front-web/src/pages/Auth/styles.scss
+++ b/front-web/src/pages/Auth/styles.scss
@@ -1,6 +1,6 @@
 .alph-container{
     display: flex;
-    padding: 40px 40px 100px 140px;
+    padding: 40px 40px 100px 0;
     justify-content: center;
 }
 
