--- a/front-web/src/pages/Auth/styles.scss
+++ b/front-web/src/pages/Auth/styles.scss
@@ -2,6 +2,8 @@
     display: flex;
     padding: 40px 40px 100px 0;
     justify-content: center;
+    background: url('../../core/assets/Images/auth-background.svg') no-repeat;
+    background-size: 100%;
 }
 
 .auth-info{
