--- a/front-web/src/core/components/ButtonIcon/styles.scss
+++ b/front-web/src/core/components/ButtonIcon/styles.scss
@@ -1,7 +1,9 @@
-
+.default-button{
+    display: flex;
+}
 .btn-icon{
-    height: 70px;
     width: 380px;
+    height: 70px;
     border-radius: 10px 0 0 10px;
     text-transform: uppercase;
 }
@@ -14,4 +16,23 @@
     align-items: center;
     justify-content: center;
     color: #FFF;
+}
+
+@media(max-width: 576px){
+    .default-button{
+        max-width: 70vw;
+        height: 50px;
+        margin-bottom: 15px;
+    }
+
+    .default-button button h5{
+        font-size: 1em;
+    }
+    .btn-icon{
+        max-width: 70vw;
+        height: 50px;
+    }
+    .btn-icon-content{
+        height: 50px;
+    }
 }
