--- a/front-web/src/core/components/ProductFilters/styles.scss
+++ b/front-web/src/core/components/ProductFilters/styles.scss
@@ -45,3 +45,23 @@
     color: #9e9e9e;
   }
 }
+
+@media(max-width: 768px){
+  .product-filters-container{
+    width: 100%;
+  }
+}
+
+@media(max-width: 576px){
+  .product-filters-container{
+    width: 100%;
+    height: 200px;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+  }
+  .filter-select-container{
+    width: 100%;
+    margin: 10px;
+  }
+}
