--- a/front-web/src/pages/Auth/Components/Card/styles.scss
+++ b/front-web/src/pages/Auth/Components/Card/styles.scss
@@ -15,3 +15,13 @@
     font-weight: normal;
 
 }
+
+@media(max-width: 576px){
+    .auth-card{
+        margin: 10px;
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+}
