--- a/front-web/src/pages/admin/Components/Navbar/styles.scss
+++ b/front-web/src/pages/admin/Components/Navbar/styles.scss
@@ -27,3 +27,31 @@
         border-bottom: 1px solid #E1E1E1;
     }
 }
+
+@media(max-width: 768px){
+    .admin-nav-container{
+        width: 100%;
+        height: 120px;
+        display: flex;
+        align-items: center;
+    }
+
+    .admin-nav-container ul{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
+    .admin-nav-item{
+        width: 278px;
+        height: 60px;
+        border-radius: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding-left: 0px;
+        background-color: #f2f2f2;
+    }
+}
