--- a/front-web/src/pages/admin/Components/Products/Form/styles.scss
+++ b/front-web/src/pages/admin/Components/Products/Form/styles.scss
@@ -1,7 +1,6 @@
-.row{
-  flex-wrap: nowrap;
-}
+
 .editor-container {
+    width: 470px;
     padding: 20px;
     border: 1px solid #E1E1E1;
     border-radius: 10px !important;
@@ -24,6 +23,11 @@
     border-radius: 10px !important;
   }
 
+  .product-form-container{
+    display: flex;
+    flex-direction: row;
+  }
+
   .categories-select__control{
     height: 50px;
     border: 1px solid #E1E1E1 !important;
@@ -36,4 +40,27 @@
 
   .categories-select__placeholder{
     color: #9e9e9e;
+  }
+
+  @media(max-width: 576px){
+    .product-form-container{
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      margin-left: -15px;
+    }
+
+    input{
+      width: 250px;
+    }
+
+    .categories-select__control{
+      width: 250px;
+      min-width: 50px;
+      height: 100%;
+    }
+
+    .input-base{
+      width: 250px;
+    }
   }
