--- a/front-web/src/pages/home/styles.scss
+++ b/front-web/src/pages/home/styles.scss
@@ -1,15 +1,13 @@
 .home-container{
-    margin-top: 40px;
-    padding-left: 40px;
-    padding-right: 40px;
-
+    margin: 40px 0px;
+    padding: 0 40px;
 }
 
 .home-content{
-    padding-top: 50px;
-    padding-bottom: 50px;
-    padding-left: 100px;
-    
+    display: flex;
+    flex-direction: row;
+    padding: 150px 0 155px 0;
+
 }
 
 .text-title{
@@ -27,7 +25,80 @@
     margin-top: 30px;
     margin-bottom: 150px;
 }
+
+.home-text{
+    padding-left: 100px;
+    
+}
 .main-image{
     width: 100%;
+    
+}
+  
+
+@media (max-width: 768px){
+    .home-content{
+        width: 100%;
+        flex-direction: column-reverse;
+        align-items: center;
+        padding: 0px 20px 50px 20px;
+    }
+
+    .main-image{
+        width: 350px;
+        margin: 0px 0px -20px -60px;
+    }
+
+    .home-text{
+        width: 100%;
+        height: 100px;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        flex: 1;
+    }
+
+    .text-title{
+        font-size: 2.5em;
+        text-align: center;
+        font-weight: 400;
+    }
+
+    .text-subtitle{
+        font-size: 1.2em;
+        text-align: center;
+        font-weight: 400;
+        margin: 40px 0px;
+    }
+    
+}
+
+
+@media (max-width: 576px){
+    .home-content{
+        flex-direction: column-reverse;
+        padding: 0;
+    }
+
+    .main-image{
+        width: 70vw !important;
+        margin: -100px 0px -80px -80px;
+    }
+
+    .text-title{
+        font-size: 1.5rem;
+        text-align: center;
+        line-height: 30px;
+        letter-spacing: 0;
+    }
+
+    .text-subtitle{
+        font-size: 0.7em;
+        text-align: center;
+        font-weight: 400;
+        margin: 40px 0px;
+    }
     
 }
